[project]
name = "gpt-sovits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "cn2an>=0.5.22",
    "einops>=0.8.0",
    "fastapi>=0.115.4",
    "ffmpeg-python>=0.2.0",
    "ffmpeg>=1.4",
    "gradio>=3.36.1",
    "jieba-fast>=0.53",
    "langsegment>=0.3.5",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pydantic>=2.9.2",
    "pyopenjtalk>=0.3.4",
    "pypinyin>=0.53.0",
    "pytorch-lightning>=2.4.0",
    "requests>=2.32.3",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
    "uvicorn>=0.32.0",
]
